@@ -431,7 +431,6 @@ typedef struct rcoption {
 #define NANO_ALT_EQUALS '='
 #define NANO_ALT_RCARET '>'
 #define NANO_ALT_QUESTION '?'
-#define NANO_ALT_LBRACKET '['
 #define NANO_ALT_BACKSLASH '\\'
 #define NANO_ALT_RBRACKET ']'
 #define NANO_ALT_CARET '^'
@@ -550,19 +549,17 @@ typedef struct rcoption {
 #define NANO_BACKSPACE_KEY		NANO_CONTROL_H
 #define NANO_TAB_KEY			NANO_CONTROL_I
 #define NANO_INDENTMARKED_KEY		NANO_ALT_RCURLYBRACKET
-#define NANO_INDENTMARKED_ALTKEY	NANO_ALT_RBRACKET
 #define NANO_UNINDENTMARKED_KEY		NANO_ALT_LCURLYBRACKET
-#define NANO_UNINDENTMARKED_ALTKEY	NANO_ALT_LBRACKET
 #define NANO_SUSPEND_KEY		NANO_CONTROL_Z
 #define NANO_ENTER_KEY			NANO_CONTROL_M
 #define NANO_TOFILES_KEY		NANO_CONTROL_T
 #define NANO_APPEND_KEY			NANO_ALT_A
 #define NANO_PREPEND_KEY		NANO_ALT_P
 #define NANO_PREVFILE_KEY		NANO_ALT_LCARET
-#define NANO_NEXTFILE_KEY		NANO_ALT_RCARET
 #define NANO_PREVFILE_ALTKEY		NANO_ALT_COMMA
+#define NANO_NEXTFILE_KEY		NANO_ALT_RCARET
 #define NANO_NEXTFILE_ALTKEY		NANO_ALT_PERIOD
-#define NANO_BRACKET_KEY		NANO_CONTROL_5
+#define NANO_BRACKET_KEY		NANO_ALT_RBRACKET
 #define NANO_NEXTWORD_KEY		NANO_CONTROL_SPACE
 #define NANO_PREVWORD_KEY		NANO_ALT_SPACE
 #define NANO_WORDCOUNT_KEY		NANO_ALT_D
